--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview --open"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.25.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "countries-list": "^3.1.1",
