--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.25.2",
+    "@clerk/themes": "^2.2.23",
+    "@supabase/supabase-js": "^2.49.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "countries-list": "^3.1.1",
