--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.25.2",
     "@clerk/themes": "^2.2.23",
+    "@googlemaps/extended-component-library": "^0.6.13",
     "@supabase/supabase-js": "^2.49.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
