--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/themes": "^2.2.23",
     "@googlemaps/extended-component-library": "^0.6.13",
     "@supabase/supabase-js": "^2.49.2",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "countries-list": "^3.1.1",
