--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/themes": "^2.2.23",
     "@googlemaps/extended-component-library": "^0.6.13",
     "@supabase/supabase-js": "^2.49.2",
+    "@vercel/analytics": "^1.5.0",
     "@vis.gl/react-google-maps": "^1.5.2",
     "dotenv": "^16.4.7",
     "react": "^19.0.0",
