--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview --open --host"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.8",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "@supabase/supabase-js": "^2.49.2",
     "@vercel/analytics": "^1.5.0",
     "dotenv": "^16.4.7",
