--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.3.0",
+    "react-window": "^2.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
